closes #16 lihtne kontroll quadi scale'ile Muutsin ka index.html title ära, made no sense

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<title>Computer Graphcis - Task 7.2</title>
+		<title>Portals</title>
 		<script type="text/javascript" src="three.r81-tweaked.js"></script>
 		<script type="text/javascript" src="THREEx.KeyboardState.js"></script>
 		<script type="text/javascript" src="Objects.js"></script>
